--- a/RockyShop/Views/Category/Index.cshtml
+++ b/RockyShop/Views/Category/Index.cshtml
@@ -1,6 +1,40 @@
-﻿@{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
-}
+﻿@using Microsoft.EntityFrameworkCore.Metadata.Internal
+@model IEnumerable<Category>
 
-<h2>title</h2>
+
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">Category list</h2>
+        </div>
+        <div class="col-6">Create new category</div>
+    </div>
+    
+    <br/><br/>
+    
+    @if (Model.Any())
+    {
+        <table class="table table-bordered table-striped" style="width: 100%">
+            <thead>
+            <tr>
+                <th>Category name</th>
+                <th>Display order</th>
+            </tr>
+            </thead>
+            <tbody>
+            @foreach (var obj in Model)
+            {
+                <tr>
+                    <td width="50%">@obj.Name</td>
+                    <td width="30%">@obj.DisplayOrder</td>
+                    <td></td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p>No category exists</p>
+    }
+</div>
