--- a/RockyShop/Views/Category/Index.cshtml
+++ b/RockyShop/Views/Category/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.EntityFrameworkCore.Metadata.Internal
-@model IEnumerable<Category>
+﻿@model IEnumerable<Category>
 
 
 <div class="container p-3">
@@ -7,7 +6,9 @@
         <div class="col-6">
             <h2 class="text-primary">Category list</h2>
         </div>
-        <div class="col-6">Create new category</div>
+        <div class="col-6 text-end">
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">Create new category</a>
+        </div>
     </div>
     
     <br/><br/>
