--- a/RockyShop/Views/Shared/_Layout.cshtml
+++ b/RockyShop/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewData["Title"] - RockyShop</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/RockyShop/styles.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
@@ -24,6 +23,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                    </li>
+                    <li>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="ApplicationType" asp-action="Index">Application type</a>
                     </li>
                 </ul>
             </div>
