--- a/RockyShop/Views/Category/Create.cshtml
+++ b/RockyShop/Views/Category/Create.cshtml
@@ -34,7 +34,10 @@
                             <input type="submit" class="btn btn-info w-100" value="Create"/>
                         </div>
                         <div class="col">
-                            <a asp-action="Index" class="btn btn-success w-100">Back</a>
+                            <a asp-action="Index" class="btn btn-success w-100">
+                                <i class="fa-regular fa-right-from-bracket"></i>
+                                Back
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -47,6 +50,7 @@
 </form>
 
 @* Валидация на стороне клиента *@
+
 @section Scripts
 {
     @{
