--- a/RockyShop/Views/Category/Delete.cshtml
+++ b/RockyShop/Views/Category/Delete.cshtml
@@ -35,7 +35,10 @@
                             <input type="submit" class="btn btn-danger w-100" value="Delete"/>
                         </div>
                         <div class="col">
-                            <a asp-action="Index" class="btn btn-success w-100">Back</a>
+                            <a asp-action="Index" class="btn btn-success w-100">
+                                <i class="fa-regular fa-right-from-bracket"></i>
+                                Back
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -48,6 +51,7 @@
 </form>
 
 @* Валидация на стороне клиента *@
+
 @section Scripts
 {
     @{
