--- a/RockyShop/Views/Category/Index.cshtml
+++ b/RockyShop/Views/Category/Index.cshtml
@@ -7,7 +7,10 @@
             <h2 class="text-primary">Category list</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">Create new category</a>
+            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                <i class="fa-regular fa-plus"></i>
+                Create new category
+            </a>
         </div>
     </div>
     
@@ -30,8 +33,12 @@
                     <td width="30%">@obj.DisplayOrder</td>
                     <td class="text-center">
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">Edit</a>
-                            <a asp-controller="Category" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-2">Delete</a>
+                            <a asp-controller="Category" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-2">
+                                <i class="fa-sharp fa-light fa-trash"></i>
+                            </a>
                         </div>
                     </td>
                 </tr>
