--- a/RockyShop/Views/ApplicationType/Index.cshtml
+++ b/RockyShop/Views/ApplicationType/Index.cshtml
@@ -7,12 +7,15 @@
             <h2 class="text-primary">Application type list</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary">Create new application type</a>
+            <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary">
+                <i class="fa-regular fa-plus"></i>
+                Create new application type
+            </a>
         </div>
     </div>
-    
+
     <br/><br/>
-    
+
     @if (Model.Any())
     {
         <table class="table table-bordered table-striped" style="width: 100%">
@@ -26,7 +29,16 @@
             {
                 <tr>
                     <td width="50%">@obj.Name</td>
-                    <td></td>
+                    <td class="text-center">
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="ApplicationType" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
+                            <a asp-controller="ApplicationType" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger mx-2">
+                                <i class="fa-sharp fa-light fa-trash"></i>
+                            </a>
+                        </div>
+                    </td>
                 </tr>
             }
             </tbody>
