--- a/RockyShop/Views/Product/UpSert.cshtml
+++ b/RockyShop/Views/Product/UpSert.cshtml
@@ -1,14 +1,14 @@
-﻿@model Product
+﻿@model RockyShop.Models.ViewModels.ProductVM
 
 @{
     var title = "Create product";
 }
 
 <form method="post" enctype="multipart/form-data">
-    @if (Model.Id != 0)
+    @if (Model.Product.Id != 0)
     {
         title = "Edit product";
-        <input asp-for="Id" hidden/>
+        <input asp-for="Product.Id" hidden/>
     }
     <div class="border p-3">
         <div class="form-group row">
@@ -18,31 +18,31 @@
             <div class="col-8">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Name"></label>
+                        <label asp-for="Product.Name"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Name" class="form-control"/>
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <input asp-for="Product.Name" class="form-control"/>
+                        <span asp-validation-for="Product.Name" class="text-danger"></span>
                     </div>
 
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Price"></label>
+                        <label asp-for="Product.Price"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Price" class="form-control"/>
-                        <span asp-validation-for="Price" class="text-danger"></span>
+                        <input asp-for="Product.Price" class="form-control"/>
+                        <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
 
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Description"></label>
+                        <label asp-for="Product.Description"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Description" class="form-control"/>
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                        <input asp-for="Product.Description" class="form-control"/>
+                        <span asp-validation-for="Product.Description" class="text-danger"></span>
                     </div>
 
                 </div>
@@ -51,19 +51,19 @@
                         Image
                     </div>
                     <div class="col-8">
-                        <input type="file" name="files" id="uploadBox" multiple asp-for="Image" class="form-control"/>
+                        <input type="file" name="files" id="uploadBox" multiple asp-for="Product.Image" class="form-control"/>
                     </div>
 
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="CategoryId"></label>
+                        <label asp-for="Product.CategoryId"></label>
                     </div>
                     <div class="col-8">
-                        <select asp-for="CategoryId" asp-items="@ViewBag.CategoryDropDown" name="" id="" class="form-control">
+                        <select asp-for="Product.CategoryId" asp-items="@Model.CategorySelectList" name="" id="" class="form-control">
                             <option disabled>--Select Category</option>
                         </select>
-                        <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
                     </div>
                 
                 </div>
@@ -71,7 +71,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            @if (Model.Id != 0)
+                            @if (Model.Product.Id != 0)
                             {
                                 <input type="submit" class="btn btn-info w-100" value="Update"/>
                             }
