--- a/RockyShop/Views/Product/UpSert.cshtml
+++ b/RockyShop/Views/Product/UpSert.cshtml
@@ -103,4 +103,18 @@
     @{
         <partial name="_ValidationScriptsPartial"/>
     }
+
+    <script>
+        function validateInput() {
+            if (document.getElementById("uploadBox").value === "") {
+                Swal.fire(
+                  'Error!',
+                  'Please upload an Image',
+                  'error'
+                )
+                return false;
+            }
+            return true;
+         }
+    </script>
 }
