--- a/RockyShop/Views/Shared/_Layout.cshtml
+++ b/RockyShop/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://kit.fontawesome.com/d486a252b6.js" crossorigin="anonymous"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
